objects/Work_Element__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Role_Name__c</fullName>
        <formula>Accountable_Role__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountable Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountable_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accountable Process Role Id</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Process Work Element</relationshipLabel>
        <relationshipName>Work_Element</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_review__c</fullName>
        <label>Days to review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_ID__c</fullName>
        <label>Process Deliverable ID</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Process Work Element</relationshipLabel>
        <relationshipName>Work_Element</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Deliverable_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_Description__c</fullName>
        <label>Help Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Process Work Element</relationshipLabel>
        <relationshipName>Work_Element</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Instructions__c</fullName>
        <label>Work Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Process Work Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PWE-{0000000000}</displayFormat>
        <label>Process Work Element ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Work Element</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>